# alt-soracom-data-reader-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/: mcp.sample.json
soracom_data_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
soracom_data_mcp/tools/: __init__.py  harvest.py  soracam.py  stats.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_tools_harvest.py  test_tools_soracam.py  test_tools_stats.py
