[project]
name = "alt-soracom-data-reader-mcp"
version = "0.1.0"
description = "MCP server for SORACOM data analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.3",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
]

[project.scripts]
soracom-data-mcp = "soracom_data_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
